bswagger 功能实现
