# app/Doc/api.php
@@ -17,6 +17,14 @@
  *         description="local Api server",
  *         url="localhost2/swoftd/public/index.php/",
  *     )
+ *     @OA\Server(
+ *         description="dev Api server",
+ *         url="http://10.22.60.240/",
+ *     ), 
+ *     @OA\Server(
+ *         description="test Api server",
+ *         url="http://localhost2/ailabv1/public/index.php/",
+ *     )
  * )
  */
 
@@ -40,6 +48,31 @@
  *     description="successful operation",
  *     @OA\JsonContent(ref="#/components/schemas/HighVideoResponse"),
  *     @OA\XmlContent(ref="#/components/schemas/HighVideoResponse")
+ *   )
+ * )
+ */
+
+
+/**
+ * @OA\Get(
+ *   path="/queryApi/getRankAndPreDict",
+ *   summary="关单神器大数据接口",
+ *   tags={"api"},
+ *   @OA\Parameter(
+ *         name="classId",
+ *         in="query",
+ *         description="课程ID",
+ *         required=true,
+ *         example=123,
+ *         @OA\Schema(
+ *             type="integer"
+ *         )
+ *   ),
+ *   @OA\Response(
+ *     response=200,
+ *     description="successful operation",
+ *     @OA\JsonContent(ref="#/components/schemas/RankPredictResponse"),
+ *     @OA\XmlContent(ref="#/components/schemas/RankPredictResponse")
  *   )
  * )
  */
